--- a/pom.xml
+++ b/pom.xml
@@ -175,11 +175,13 @@
             <version>5.0.8.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>RELEASE</version>
+            <version>2.9.5</version>
         </dependency>
+
 
     </dependencies>
 
